@@ -96,6 +96,7 @@ declare -a SOURCES=(
   Tools/simplifier_trace.scala
   Tools/task_statistics.scala
   Tools/update_cartouches.scala
+  Tools/update_semicolons.scala
   library.scala
   term.scala
   term_xml.scala
